[gd_scene load_steps=34 format=2]

[ext_resource path="res://assets/textures/Person.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/PersonColumn.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Stadium.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/baseball_heaven_fever.ogg" type="AudioStream" id=4]
[ext_resource path="res://src/Player.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/Seat.png" type="Texture" id=7]
[ext_resource path="res://src/CameraBouncer.gd" type="Script" id=8]
[ext_resource path="res://assets/textures/mask.png" type="Texture" id=9]
[ext_resource path="res://src/Spotlight.gd" type="Script" id=10]
[ext_resource path="res://assets/textures/Status1.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/Status2.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/Status3.png" type="Texture" id=13]
[ext_resource path="res://src/UI.gd" type="Script" id=14]
[ext_resource path="res://assets/textures/Guardrail.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/Plane.png" type="Texture" id=16]
[ext_resource path="res://src/Plane.gd" type="Script" id=17]
[ext_resource path="res://assets/textures/Cloud.png" type="Texture" id=18]
[ext_resource path="res://assets/audio/509526__synthnisse__claps.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/textures/Title.png" type="Texture" id=20]
[ext_resource path="res://assets/textures/Pointer.png" type="Texture" id=21]
[ext_resource path="res://assets/textures/talk.png" type="Texture" id=22]
[ext_resource path="res://assets/611Bit.tres" type="DynamicFont" id=23]
[ext_resource path="res://src/Tutorial.gd" type="Script" id=24]
[ext_resource path="res://assets/audio/blip.wav" type="AudioStream" id=25]

[sub_resource type="Animation" id=1]
resource_name = "Pan Up"
length = 17.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 16, 17 ),
"transitions": PoolRealArray( 1, 1.05173e-17, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -280 ), Vector2( 0, -280 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Pan Up End"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -640 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spotlight"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Visuals/Spotlight:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Visuals/Spotlight/SpotlightTarget:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.5, 3.5, 4.5, 5.5, 6.5, 7.5, 8.5, 9.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -80 ), Vector2( 0, -80 ), Vector2( 112, 16 ), Vector2( -64, -16 ), Vector2( -96, -192 ), Vector2( -176, 0 ), Vector2( 160, -168 ), Vector2( 0, -216 ), Vector2( -120, 56 ), Vector2( -40, -136 ), Vector2( 96, 48 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Visuals/Spotlight:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "StartGame"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Camera2D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 7 ),
"update": 0,
"values": [ Vector2( 0, -328 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Camera2D:zoom")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 9.5, 10 ),
"transitions": PoolRealArray( 1, 1.27222e-09, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=6]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.85, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flash:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 9 ), Vector2( 1.5, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( -120, -0.0413595, 57.0304, 0.0413595, -57.0304, -200, -0.0969349, -0.757248, 0.0969349, 0.757248, -120, -0.0561347, -10.1554, 0.0561347, 10.1554 ),
"times": PoolRealArray( 0, 0.4, 0.8 )
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flash:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 9 ), Vector2( 1.5, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flash:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1

[node name="Stadium" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="Great" type="TextureRect" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 128.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Good" type="TextureRect" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 128.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miss" type="TextureRect" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_right = 128.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="NinePatchRect" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -200.0
margin_right = -16.0
margin_bottom = -56.0
texture = ExtResource( 22 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialouge" type="Label" parent="UI/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 23 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blip" type="AudioStreamPlayer" parent="UI/Tutorial"]
stream = ExtResource( 25 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.3, 0.3 )
script = ExtResource( 8 )

[node name="Util" type="Node2D" parent="."]

[node name="WaveTimer" type="Timer" parent="Util"]
one_shot = true

[node name="DistractionAnimator" type="AnimationPlayer" parent="Util"]
"anims/Pan Up" = SubResource( 1 )
"anims/Pan Up End" = SubResource( 2 )
anims/Spotlight = SubResource( 3 )
anims/StartGame = SubResource( 4 )
anims/Zoom = SubResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="Util"]
stream = ExtResource( 4 )

[node name="Clap" type="AudioStreamPlayer" parent="Util"]
stream = ExtResource( 19 )
pitch_scale = 1.5

[node name="Visuals" type="Node2D" parent="."]
position = Vector2( 0, 88 )

[node name="Seats" type="Sprite" parent="Visuals"]
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 528, 512 )

[node name="Guardrail" type="Sprite" parent="Visuals"]
position = Vector2( 0, -279 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 0, 0, 528, 48 )

[node name="Sky" type="Node2D" parent="Visuals"]

[node name="Cloud" type="Sprite" parent="Visuals/Sky"]
position = Vector2( -141.5, -374.482 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 15.0
frame_time = 1.0

[node name="Cloud2" type="Sprite" parent="Visuals/Sky"]
position = Vector2( 148.887, -452.267 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 10.0
frame_time = 1.2

[node name="Cloud4" type="Sprite" parent="Visuals/Sky"]
position = Vector2( 87.2174, -436.101 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 12.0
frame_time = 1.2

[node name="Cloud5" type="Sprite" parent="Visuals/Sky"]
position = Vector2( -72, -436.101 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 20.0
frame_time = 1.2

[node name="Cloud7" type="Sprite" parent="Visuals/Sky"]
position = Vector2( 72, -566.411 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 18.0
frame_time = 1.2

[node name="Cloud6" type="Sprite" parent="Visuals/Sky"]
position = Vector2( -147.895, -523.452 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 20.0
frame_time = 1.2

[node name="Cloud3" type="Sprite" parent="Visuals/Sky"]
position = Vector2( 120, -350.482 )
texture = ExtResource( 18 )
vframes = 2
script = ExtResource( 17 )
speed = 12.0
frame_time = 1.0

[node name="Plane" type="Sprite" parent="Visuals/Sky"]
position = Vector2( 160, -468 )
texture = ExtResource( 16 )
vframes = 4
script = ExtResource( 17 )
speed = 25.0
frame_time = 0.1

[node name="Title" type="Sprite" parent="Visuals"]
position = Vector2( 0, -351 )
texture = ExtResource( 20 )
region_enabled = true
region_rect = Rect2( 0, 0, 240, 200 )

[node name="People" type="Node2D" parent="Visuals"]
position = Vector2( 0, -88 )
__meta__ = {
"_edit_lock_": true
}

[node name="PersonColumn1" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( -264, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn2" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( -216, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn3" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( -168, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn4" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( -120, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn5" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( -72, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn6Center" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( -24, -216 )
person_count = 8
frame = 0
skip = 2

[node name="PersonColumn7" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( 24, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn8" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( 72, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn9" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( 120, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn10" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( 168, -216 )
person_count = 8
frame = 0
skip = -1

[node name="PersonColumn11" parent="Visuals/People" instance=ExtResource( 2 )]
position = Vector2( 216, -216 )
person_count = 8
frame = 0
skip = -1

[node name="Player" type="Sprite" parent="Visuals"]
position = Vector2( 0, -120 )
texture = ExtResource( 1 )
hframes = 8
frame = 3
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals/Player"]
anims/Jump = SubResource( 6 )
anims/Wave = SubResource( 7 )

[node name="Flash" type="Sprite" parent="Visuals/Player"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 8 )
position = Vector2( 0, 112 )
scale = Vector2( 1.5, 8 )
texture = ExtResource( 6 )

[node name="Pointer" type="Sprite" parent="Visuals"]
visible = false
position = Vector2( 39.2174, -80 )
texture = ExtResource( 21 )

[node name="Friend" type="Sprite" parent="Visuals"]
visible = false
modulate = Color( 1, 0.592157, 0.313726, 1 )
position = Vector2( 45, -120 )
texture = ExtResource( 1 )
hframes = 8
frame = 7

[node name="Spotlight" type="Sprite" parent="Visuals"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -8 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( -200, -120, 530, 530 )
script = ExtResource( 10 )

[node name="SpotlightTarget" type="Position2D" parent="Visuals/Spotlight"]
position = Vector2( 0, -80 )
[connection signal="player_click" from="Visuals/Player" to="." method="_on_Player_player_click"]
